--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task4",
   "version": "0.1.0",
-  "homepage": "https://khushiojha.github.io/Fetch_Details_TASK4",
+  "homepage": "https://AshrayG.github.io/Fetch-Details-in-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
